--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,16 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: dayanyrec.github.io
+title: Dayany Espindola
 email: dayanyrec@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Um blog. Mistura de desenvolvimento de software, pensamentos, receitas de bolo, processamento de imagens...
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: dayanyrec
 github_username:  dayanyrec
